// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pagesmemberslistcomponents (body) tests should render as expected when is invoked 1`] = `
<tbody>
  <Row
    key="1"
    member={
      Object {
        "avatarUrl": "maria.png",
        "id": 1,
        "name": "María",
      }
    }
  />
  <Row
    key="2"
    member={
      Object {
        "avatarUrl": "pedro.png",
        "id": 2,
        "name": "Pedro",
      }
    }
  />
</tbody>
`;

exports[`pagesmemberslistcomponents (body) tests should render as expected when passing required properties 1`] = `
<tbody>
  <Row
    key="1"
    member={
      Object {
        "avatarUrl": "maria.png",
        "id": 1,
        "name": "María",
      }
    }
  />
  <Row
    key="2"
    member={
      Object {
        "avatarUrl": "pedro.png",
        "id": 2,
        "name": "Pedro",
      }
    }
  />
</tbody>
`;

exports[`pagesmemberslistcomponents tests should render as expected when is invoked 1`] = `
<tbody>
  <Component
    key="1"
    member={
      Object {
        "avatarUrl": "maria.png",
        "id": 1,
        "name": "María",
      }
    }
  />
  <Component
    key="2"
    member={
      Object {
        "avatarUrl": "pedro.png",
        "id": 2,
        "name": "Pedro",
      }
    }
  />
</tbody>
`;
